Fix layout bugs. Hide search for now.

--- a/src/components/navigation/navigation.module.scss
+++ b/src/components/navigation/navigation.module.scss
@@ -88,6 +88,7 @@
   --side-navigation-mobile-menu-border-color: var(--color-white) !important;
   --side-navigation-mobile-menu-z-index: 100 !important;
   margin-top: var(--spacing-xl);
+  height: auto !important;
 }
 
 .mainLevel {
